crates/sql-orm/tests/ui/from_row_tuple_struct.rs
use sql_orm::prelude::*;

#[derive(FromRow)]
struct TupleProjection(i64);

fn main() {}
